--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
       <li><a href="#home">首页</a></li>
       <li><a href="#about">人物档案</a></li>
       <li><a href="#services">精彩视频</a></li>
-      <li><a href="/index/myreport.html" target="_blank">说明</a></li>
+      <li><a href="./myreport.html" target="_blank">说明</a></li>
     </ul>
   </div>
 
